--- a/src/partials/proposal-to-leave-application.html
+++ b/src/partials/proposal-to-leave-application.html
@@ -1,6 +1,6 @@
 <!-- PROPOSAL TO LEAVE AN APPLICATION  -->
-<div class="container proposal-container">
-  <section class="proposal-section">
+<section class="section proposal-section">
+  <div class="container proposal-container">
     <h2 class="visually-hidden">Proposal to leave an application</h2>
 
     <strong class="proposal-appeal"
@@ -46,5 +46,5 @@
         >Leave an application</a
       >
     </div>
-  </section>
-</div>
+  </div>
+</section>
