--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -97,6 +97,122 @@
             definitely seen a big improvement in my language skills.
           </p>
         </li>
+        <!-- REVIEW 4 -->
+        <li class="reviews-item swiper-slide">
+          <div class="reviews-item-wrapper">
+            <div class="reviews-item-box">
+              <img
+                srcset="
+                  ./img/reviews/review-4/review-pic-4.avif    1x,
+                  ./img/reviews/review-4/review-pic-4@2x.avif 2x,
+                  ./img/reviews/review-4/review-pic-4.webp    1x,
+                  ./img/reviews/review-4/review-pic-4@2x.webp 2x,
+                  ./img/reviews/review-4/review-pic-4.png     1x,
+                  ./img/reviews/review-4/review-pic-4@2x.png  2x
+                "
+                src="./qimg/reviews/review-4/review-pic-4.png"
+                alt="student Omar"
+                loading="lazy"
+              />
+            </div>
+            <div class="reviews-item-thumb">
+              <p class="reviews-item-title">Omar</p>
+              <p class="reviews-item-subtitle">Student</p>
+            </div>
+          </div>
+          <p class="reviews-item-description">
+            The school offers a great balance of language theory and practical
+            exercises. The personalized feedback from the teachers has helped me
+            improve my weak areas.
+          </p>
+        </li>
+        <!-- REVIEW 5 -->
+        <li class="reviews-item swiper-slide">
+          <div class="reviews-item-wrapper">
+            <div class="reviews-item-box">
+              <img
+                srcset="
+                  ./img/reviews/review-5/review-pic-5.avif    1x,
+                  ./img/reviews/review-5/review-pic-5@2x.avif 2x,
+                  ./img/reviews/review-5/review-pic-5.webp    1x,
+                  ./img/reviews/review-5/review-pic-5@2x.webp 2x,
+                  ./img/reviews/review-5/review-pic-5.png     1x,
+                  ./img/reviews/review-5/review-pic-5@2x.png  2x
+                "
+                src="./img/reviews/review-5/review-pic-5.png"
+                alt="student Victoria"
+                loading="lazy"
+              />
+            </div>
+            <div class="reviews-item-thumb">
+              <p class="reviews-item-title">Olha</p>
+              <p class="reviews-item-subtitle">Student</p>
+            </div>
+          </div>
+          <p class="reviews-item-description">
+            I love the dynamic and interactive teaching methods used here. It's
+            a great place to learn English in a fun and effective way. I have
+            definitely seen a big improvement in my language skills.
+          </p>
+        </li>
+        <!-- REVIEW 6 -->
+        <li class="reviews-item swiper-slide">
+          <div class="reviews-item-wrapper">
+            <div class="reviews-item-box">
+              <img
+                srcset="
+                  ./img/reviews/review-6/review-pic-6.avif    1x,
+                  ./img/reviews/review-6/review-pic-6@2x.avif 2x,
+                  ./img/reviews/review-6/review-pic-6.webp    1x,
+                  ./img/reviews/review-6/review-pic-6@2x.webp 2x,
+                  ./img/reviews/review-6/review-pic-6.png     1x,
+                  ./img/reviews/review-6/review-pic-6@2x.png  2x
+                "
+                src="./qimg/reviews/review-6/review-pic-6.png"
+                alt="student Omar"
+                loading="lazy"
+              />
+            </div>
+            <div class="reviews-item-thumb">
+              <p class="reviews-item-title">Kristiano</p>
+              <p class="reviews-item-subtitle">Student</p>
+            </div>
+          </div>
+          <p class="reviews-item-description">
+            The school offers a great balance of language theory and practical
+            exercises. The personalized feedback from the teachers has helped me
+            improve my weak areas.
+          </p>
+        </li>
+        <!-- REVIEW 7 -->
+        <li class="reviews-item swiper-slide">
+          <div class="reviews-item-wrapper">
+            <div class="reviews-item-box">
+              <img
+                srcset="
+                  ./img/reviews/review-7/review-pic-7.avif    1x,
+                  ./img/reviews/review-7/review-pic-7@2x.avif 2x,
+                  ./img/reviews/review-7/review-pic-7.webp    1x,
+                  ./img/reviews/review-7/review-pic-7@2x.webp 2x,
+                  ./img/reviews/review-7/review-pic-7.png     1x,
+                  ./img/reviews/review-7/review-pic-7@2x.png  2x
+                "
+                src="./img/reviews/review-7/review-pic-7.png"
+                alt="student Victoria"
+                loading="lazy"
+              />
+            </div>
+            <div class="reviews-item-thumb">
+              <p class="reviews-item-title">Olha</p>
+              <p class="reviews-item-subtitle">Student</p>
+            </div>
+          </div>
+          <p class="reviews-item-description">
+            I love the dynamic and interactive teaching methods used here. It's
+            a great place to learn English in a fun and effective way. I have
+            definitely seen a big improvement in my language skills.
+          </p>
+        </li>
       </ul>
       <div class="swiper-pagination"></div>
     </div>
