fixed form radio buttons

--- a/src/partials/leave-application.html
+++ b/src/partials/leave-application.html
@@ -107,10 +107,12 @@
                 class="leave-application-form-radio-label"
                 for="teacher-maria"
               >
-                <span class="leave-application-form-radio">
-                  <svg width="10" height="10">
-                    <use href="./img/icons.svg#icon-circle"></use>
-                  </svg>
+                <span class="leave-application-form-radio-wrapper">
+                  <span class="leave-application-form-radio">
+                    <svg width="10" height="10">
+                      <use href="./img/icons.svg#icon-circle"></use>
+                    </svg>
+                  </span>
                 </span>
                 Maria</label
               >
@@ -129,10 +131,12 @@
                 class="leave-application-form-radio-label"
                 for="teacher-artem"
               >
-                <span class="leave-application-form-radio">
-                  <svg width="10" height="10">
-                    <use href="./img/icons.svg#icon-circle"></use>
-                  </svg>
+                <span class="leave-application-form-radio-wrapper">
+                  <span class="leave-application-form-radio">
+                    <svg width="10" height="10">
+                      <use href="./img/icons.svg#icon-circle"></use>
+                    </svg>
+                  </span>
                 </span>
                 Artem</label
               >
@@ -151,10 +155,12 @@
                 class="leave-application-form-radio-label"
                 for="teacher-ilona"
               >
-                <span class="leave-application-form-radio">
-                  <svg width="10" height="10">
-                    <use href="./img/icons.svg#icon-circle"></use>
-                  </svg>
+                <span class="leave-application-form-radio-wrapper">
+                  <span class="leave-application-form-radio">
+                    <svg width="10" height="10">
+                      <use href="./img/icons.svg#icon-circle"></use>
+                    </svg>
+                  </span>
                 </span>
                 Ilona</label
               >
@@ -173,10 +179,12 @@
                 class="leave-application-form-radio-label"
                 for="teacher-volodymr"
               >
-                <span class="leave-application-form-radio">
-                  <svg width="10" height="10">
-                    <use href="./img/icons.svg#icon-circle"></use>
-                  </svg>
+                <span class="leave-application-form-radio-wrapper">
+                  <span class="leave-application-form-radio">
+                    <svg width="10" height="10">
+                      <use href="./img/icons.svg#icon-circle"></use>
+                    </svg>
+                  </span>
                 </span>
                 Volodymr</label
               >
