--- a/src/css/leave-application.css
+++ b/src/css/leave-application.css
@@ -279,6 +279,24 @@
   }
 }
 
+.leave-application-form-radio-wrapper {
+  width: 20px;
+  height: 20px;
+
+  cursor: pointer;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media only screen and (min-width: 768px) {
+  .leave-application-form-radio-wrapper {
+    width: 24px;
+    height: 24px;
+  }
+}
+
 .leave-application-form-radio {
   display: inline-flex;
   justify-content: center;
@@ -291,8 +309,6 @@
   border: 2px solid var(--soft-black);
 
   fill: transparent;
-
-  cursor: pointer;
 
   transition:
     fill var(--animation-fast),
