fix: deleted avif webp pic and add width and height

--- a/src/partials/our-teachers.html
+++ b/src/partials/our-teachers.html
@@ -13,15 +13,13 @@
         <div class="our-teachers-item-thumb">
           <img
             srcset="
-              ./img/our-teachers/teacher-1/teacher-1.avif    1x,
-              ./img/our-teachers/teacher-1/teacher-1@2x.avif 2x,
-              ./img/our-teachers/teacher-1/teacher-1.webp    1x,
-              ./img/our-teachers/teacher-1/teacher-1@2x.webp 2x,
-              ./img/our-teachers/teacher-1/teacher-1.png     1x,
-              ./img/our-teachers/teacher-1/teacher-1@2x.png  2x
+              ./img/our-teachers/teacher-1/teacher-1.png    1x,
+              ./img/our-teachers/teacher-1/teacher-1@2x.png 2x
             "
             src="./img/our-teachers/teacher-1/teacher-1.png"
             alt="english teacher Maria"
+            width="150"
+            height="150"
             loading="lazy"
           />
         </div>
@@ -35,15 +33,13 @@
         <div class="our-teachers-item-thumb">
           <img
             srcset="
-              ./img/our-teachers/teacher-2/teacher-2.avif    1x,
-              ./img/our-teachers/teacher-2/teacher-2@2x.avif 2x,
-              ./img/our-teachers/teacher-2/teacher-2.webp    1x,
-              ./img/our-teachers/teacher-2/teacher-2@2x.webp 2x,
-              ./img/our-teachers/teacher-2/teacher-2.png     1x,
-              ./img/our-teachers/teacher-2/teacher-2@2x.png  2x
+              ./img/our-teachers/teacher-2/teacher-2.png    1x,
+              ./img/our-teachers/teacher-2/teacher-2@2x.png 2x
             "
             src="./img/our-teachers/teacher-2.png"
             alt="english teacher Artem"
+            width="150"
+            height="150"
             loading="lazy"
           />
         </div>
@@ -57,15 +53,13 @@
         <div class="our-teachers-item-thumb">
           <img
             srcset="
-              ./img/our-teachers/teacher-3/teacher-3.avif    1x,
-              ./img/our-teachers/teacher-3/teacher-3@2x.avif 2x,
-              ./img/our-teachers/teacher-3/teacher-3.webp    1x,
-              ./img/our-teachers/teacher-3/teacher-3@2x.webp 2x,
-              ./img/our-teachers/teacher-3/teacher-3.png     1x,
-              ./img/our-teachers/teacher-3/teacher-3@2x.png  2x
+              ./img/our-teachers/teacher-3/teacher-3.png    1x,
+              ./img/our-teachers/teacher-3/teacher-3@2x.png 2x
             "
             src="./img/our-teachers/teacher-3.png"
             alt="english teacher Ilona"
+            width="150"
+            height="150"
             loading="lazy"
           />
         </div>
@@ -80,15 +74,13 @@
         <div class="our-teachers-item-thumb">
           <img
             srcset="
-              ./img/our-teachers/teacher-4/teacher-4.avif    1x,
-              ./img/our-teachers/teacher-4/teacher-4@2x.avif 2x,
-              ./img/our-teachers/teacher-4/teacher-4.webp    1x,
-              ./img/our-teachers/teacher-4/teacher-4@2x.webp 2x,
-              ./img/our-teachers/teacher-4/teacher-4.png     1x,
-              ./img/our-teachers/teacher-4/teacher-4@2x.png  2x
+              ./img/our-teachers/teacher-4/teacher-4.png    1x,
+              ./img/our-teachers/teacher-4/teacher-4@2x.png 2x
             "
             src="./img/our-teachers/teacher-4.png"
             alt="english teacher Volodymyr"
+            width="150"
+            height="150"
             loading="lazy"
           />
         </div>
