fix: deleted avif webp pic and add width and height for pictures

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -16,15 +16,13 @@
             <div class="reviews-item-box">
               <img
                 srcset="
-                  ./img/reviews/review-1/review-pic-1.avif    1x,
-                  ./img/reviews/review-1/review-pic-1@2x.avif 2x,
-                  ./img/reviews/review-1/review-pic-1.webp    1x,
-                  ./img/reviews/review-1/review-pic-1@2x.webp 2x,
-                  ./img/reviews/review-1/review-pic-1.png     1x,
-                  ./img/reviews/review-1/review-pic-1@2x.png  2x
+                  ./img/reviews/review-1/review-pic-1.png    1x,
+                  ./img/reviews/review-1/review-pic-1@2x.png 2x
                 "
                 src="./qimg/reviews/review-1/review-pic-1.png"
                 alt="student Anna"
+                width="50"
+                height="50"
                 loading="lazy"
               />
             </div>
@@ -45,15 +43,13 @@
             <div class="reviews-item-box">
               <img
                 srcset="
-                  ./img/reviews/review-2/review-pic-2.avif    1x,
-                  ./img/reviews/review-2/review-pic-2@2x.avif 2x,
-                  ./img/reviews/review-2/review-pic-2.webp    1x,
-                  ./img/reviews/review-2/review-pic-2@2x.webp 2x,
-                  ./img/reviews/review-2/review-pic-2.png     1x,
-                  ./img/reviews/review-2/review-pic-2@2x.png  2x
+                  ./img/reviews/review-2/review-pic-2.png    1x,
+                  ./img/reviews/review-2/review-pic-2@2x.png 2x
                 "
                 src="./img/reviews/review-2/review-pic-2.png"
                 alt="student Mykhailo"
+                width="50"
+                height="50"
                 loading="lazy"
               />
             </div>
@@ -74,15 +70,13 @@
             <div class="reviews-item-box">
               <img
                 srcset="
-                  ./img/reviews/review-3/review-pic-3.avif    1x,
-                  ./img/reviews/review-3/review-pic-3@2x.avif 2x,
-                  ./img/reviews/review-3/review-pic-3.webp    1x,
-                  ./img/reviews/review-3/review-pic-3@2x.webp 2x,
-                  ./img/reviews/review-3/review-pic-3.png     1x,
-                  ./img/reviews/review-3/review-pic-3@2x.png  2x
+                  ./img/reviews/review-3/review-pic-3.png    1x,
+                  ./img/reviews/review-3/review-pic-3@2x.png 2x
                 "
                 src="./img/reviews/review-3/review-pic-3.png"
                 alt="student Victoria"
+                width="50"
+                height="50"
                 loading="lazy"
               />
             </div>
@@ -103,15 +97,13 @@
             <div class="reviews-item-box">
               <img
                 srcset="
-                  ./img/reviews/review-4/review-pic-4.avif    1x,
-                  ./img/reviews/review-4/review-pic-4@2x.avif 2x,
-                  ./img/reviews/review-4/review-pic-4.webp    1x,
-                  ./img/reviews/review-4/review-pic-4@2x.webp 2x,
-                  ./img/reviews/review-4/review-pic-4.png     1x,
-                  ./img/reviews/review-4/review-pic-4@2x.png  2x
+                  ./img/reviews/review-4/review-pic-4.png    1x,
+                  ./img/reviews/review-4/review-pic-4@2x.png 2x
                 "
                 src="./qimg/reviews/review-4/review-pic-4.png"
                 alt="student Omar"
+                width="50"
+                height="50"
                 loading="lazy"
               />
             </div>
@@ -132,15 +124,13 @@
             <div class="reviews-item-box">
               <img
                 srcset="
-                  ./img/reviews/review-5/review-pic-5.avif    1x,
-                  ./img/reviews/review-5/review-pic-5@2x.avif 2x,
-                  ./img/reviews/review-5/review-pic-5.webp    1x,
-                  ./img/reviews/review-5/review-pic-5@2x.webp 2x,
-                  ./img/reviews/review-5/review-pic-5.png     1x,
-                  ./img/reviews/review-5/review-pic-5@2x.png  2x
+                  ./img/reviews/review-5/review-pic-5.png    1x,
+                  ./img/reviews/review-5/review-pic-5@2x.png 2x
                 "
                 src="./img/reviews/review-5/review-pic-5.png"
-                alt="student Victoria"
+                alt="student Olha"
+                width="50"
+                height="50"
                 loading="lazy"
               />
             </div>
@@ -161,15 +151,13 @@
             <div class="reviews-item-box">
               <img
                 srcset="
-                  ./img/reviews/review-6/review-pic-6.avif    1x,
-                  ./img/reviews/review-6/review-pic-6@2x.avif 2x,
-                  ./img/reviews/review-6/review-pic-6.webp    1x,
-                  ./img/reviews/review-6/review-pic-6@2x.webp 2x,
-                  ./img/reviews/review-6/review-pic-6.png     1x,
-                  ./img/reviews/review-6/review-pic-6@2x.png  2x
+                  ./img/reviews/review-6/review-pic-6.png    1x,
+                  ./img/reviews/review-6/review-pic-6@2x.png 2x
                 "
                 src="./qimg/reviews/review-6/review-pic-6.png"
-                alt="student Omar"
+                alt="student Kristiano"
+                width="50"
+                height="50"
                 loading="lazy"
               />
             </div>
@@ -190,20 +178,18 @@
             <div class="reviews-item-box">
               <img
                 srcset="
-                  ./img/reviews/review-7/review-pic-7.avif    1x,
-                  ./img/reviews/review-7/review-pic-7@2x.avif 2x,
-                  ./img/reviews/review-7/review-pic-7.webp    1x,
-                  ./img/reviews/review-7/review-pic-7@2x.webp 2x,
-                  ./img/reviews/review-7/review-pic-7.png     1x,
-                  ./img/reviews/review-7/review-pic-7@2x.png  2x
+                  ./img/reviews/review-7/review-pic-7.png    1x,
+                  ./img/reviews/review-7/review-pic-7@2x.png 2x
                 "
                 src="./img/reviews/review-7/review-pic-7.png"
-                alt="student Victoria"
+                alt="student Marta"
+                width="50"
+                height="50"
                 loading="lazy"
               />
             </div>
             <div class="reviews-item-thumb">
-              <p class="reviews-item-title">Olha</p>
+              <p class="reviews-item-title">Marta</p>
               <p class="reviews-item-subtitle">Student</p>
             </div>
           </div>
