ADD mobile menu base elements and functionality

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -85,7 +85,7 @@
         aria-expanded="false"
         role="img"
       >
-        <use href="../img/icons.svg#icon-Nav"></use>
+        <use href="./img/icons.svg#icon-nav"></use>
       </svg>
     </button>
   </div>
@@ -104,7 +104,7 @@
         data-menu-close-btn
       >
         <svg class="menu-close-icon" width="32" height="32">
-          <use href="../img/icons.svg#icon-x"></use>
+          <use href="./img/icons.svg#icon-cross"></use>
         </svg>
       </button>
       <!-- Mobile Menu Navigation  -->
