add our lessons

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,7 +10,7 @@
 @import url('./header.css');
 @import url('./hero.css');
 @import url('./about-us.css');
-@import url('./our-lesson.css');
+@import url('./our-lessons.css');
 @import url('./proposal-to-leave-application.css');
 @import url('./our-teachers.css');
 @import url('./leave-application.css');
