--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -18,6 +18,7 @@
               <a
                 href="https://maps.app.goo.gl/bPwTf8E8XLwf26PZ7"
                 target="_blank"
+                rel="external"
                 class="footer-item"
                 >32a M. Bazhana ave</a
               >
