--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -105,7 +105,7 @@
 }
 
 .item-title {
-  color: rgba(255, 255, 255, 0.6);
+  color: var(--medium-white);
   letter-spacing: -0.02em;
   margin-bottom: 4px;
 }
