--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -10,7 +10,7 @@
     >
     <a href="#footer" class="scroll-to-bottom">
       <svg class="scroll-to-bottom-icon" width="20" height="20">
-        <use href="./img/icons.svg#icon-check"></use>
+        <use href="./img/icons.svg#icon-scroll"></use>
       </svg>
     </a>
   </div>
