--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,14 +1,10 @@
-<section class="about-section" id="About">
+<section class="about-section section" id="about">
   <div class="container">
-    <div class="about-title-container">
-      <h2 class="section-title">
-        About <span class="section-title-accent">Us</span>
-      </h2>
-      <p class="about-section-text">
-        We are dedicated to providing engaging and effective English language
-        courses in a supportive and stimulating learning environment
-      </p>
-    </div>
+    <h2 class="section-title">About <span class="accent">Us</span></h2>
+    <p class="about-section-text">
+      We are dedicated to providing engaging and effective English language
+      courses in a supportive and stimulating learning environment
+    </p>
     <div class="about-list-container">
       <ol class="about-list list">
         <li class="about-item item">
@@ -25,20 +21,20 @@
         </li>
         <li class="about-item item">
           <!-- <p class="about-number">04</p> -->
+
           <p class="about-text">Comprehensive language support services</p>
         </li>
-        <div class="about-emoji">
-          <img
-            srcset="
-              ../img/about-us/memoji.png    1x,
-              ../img/about-us/memoji@2x.png 2x
-            "
-            src="../img/about-us/memoji.png"
-            alt="emoji girl"
-            loading="lazy"
-          />
-        </div>
       </ol>
+      <div class="about-emoji">
+        <img
+          srcset="./img/about-us/memoji.png 1x, ./img/about-us/memoji@2x.png 2x"
+          src="./img/about-us/memoji.png"
+          alt="emoji girl"
+          width="255"
+          height="172"
+          loading="lazy"
+        />
+      </div>
     </div>
   </div>
 </section>
