add change style

--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -81,12 +81,21 @@
   position: relative;
 }
 
+@media only screen and (min-width: 1280px) {
+  .about-list-container {
+    display: flex;
+    gap: 32px;
+  }
+}
+
 .about-list {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   counter-reset: item-counter 0;
   list-style-type: none;
+
+  padding: 0;
 }
 
 @media only screen and (min-width: 768px) {
@@ -108,7 +117,7 @@
 }
 
 .about-item {
-  width: calc((100% - 32px) / 2);
+  width: 100%;
   height: 160px;
   flex-shrink: 0;
   border-radius: 16px;
@@ -116,8 +125,14 @@
   padding: 32px;
 }
 
+@media only screen and (min-width: 768px) {
+  .about-item {
+    width: calc((100% - 32px) / 2);
+  }
+}
+
 .about-text {
-  width: 271px;
+  width: 100%;
   height: 48px;
   flex-shrink: 0;
   color: var(--black);
@@ -125,11 +140,11 @@
   font-weight: 700;
   line-height: 1.2;
   letter-spacing: -0.02em;
-  padding-left: 32px;
+  /* padding-left: 32px; */
 }
 
 .about-emoji {
-  width: 335px;
+  max-width: 335px;
   height: 313px;
   border-radius: 16px;
   background: var(--green);
@@ -140,7 +155,7 @@
 
 @media only screen and (min-width: 768px) {
   .about-emoji {
-    /* width: 704px; */
+    max-width: 100%;
     height: 243px;
   }
 }
@@ -149,5 +164,8 @@
   .about-emoji {
     width: 310px;
     height: 352px;
+    flex-shrink: 0;
+    margin-top: 16px;
+    margin-bottom: 16px;
   }
 }
