--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -119,6 +119,7 @@
   justify-content: center;
   align-items: center;
 }
+.hero .hero-button:hover,
 .hero .hero-button:focus {
   background-color: var(--pressed-green);
 }
