--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -81,6 +81,7 @@
 @media screen and (min-width: 768px) {
   .hero-container {
     padding: 260px 32px 295px 32px;
+    border-radius: 30px;
   }
 }
 @media only screen and (min-width: 1280px) {
